--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"  />
+    <!-- Meat viewports -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Uttkarsh's marvel superHero charcters where one can search marvel comic characters. "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="marvel, marvel-superheros, superheors, Uttkarsh, marvel-comic, action-figures, action-characters, ironman, thor, logo marvel superhero, marvel superheros uttkarsh, marvel superhero 2, best marvel superhero" />
+    <meta name="author" content="Uttkarsh"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Marvel superheros - Uttkarsh's marvel superHero colletion</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
